--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 8webpack_jere/node_modules
+8webpack_jere/dist
 mod_10_todo/node_modules
+mod_10_todo/dist
 mod_11_callbacks_promises/node_modules
+mod_11_callbacks_promises/dist
 mod_12_http_upload/node_modules
+mod_12_http_upload/dist
