--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\iconos\jsfolder_99356.ico,0
+IconResource=G:\iconos\javascript_icon_130900.ico,0
 [ViewState]
 Mode=
 Vid=
